# xentara-simple-sample-web-service

./: .gitignore  CMakeLists.txt  README.md
config/: model.json
src/: AbstractAuthenticationProvider.hpp  AbstractTokenVerification.cpp  AbstractTokenVerification.hpp  HttpError.hpp  JwksTokenVerification.cpp  JwksTokenVerification.hpp  JwtCpp.hpp  OpenIdAuthenticationProvider.cpp  OpenIdAuthenticationProvider.hpp  Plugin.cpp  Plugin.hpp  Server.cpp  Server.hpp  ServiceProvider.cpp  ServiceProvider.hpp  SimpleTokenVerification.cpp  SimpleTokenVerification.hpp  TokenVerifierFactory.cpp  TokenVerifierFactory.hpp
